PHANTOM / REFLECTION : Add namespace aliasing PHANTOM / UNITEST : fix project

--- a/projects/msvc/2010/phantom.vcxproj
+++ b/projects/msvc/2010/phantom.vcxproj
@@ -382,7 +382,7 @@
     <ClInclude Include="..\..\..\phantom\util\BitField.h" />
     <ClInclude Include="..\..\..\phantom\util\Comparator.classdef.h" />
     <ClInclude Include="..\..\..\phantom\util\Comparator.h" />
-    <ClInclude Include="..\..\..\phantom\util\Flags.h" />
+    <ClInclude Include="..\..\..\phantom\util\flags.h" />
     <ClInclude Include="..\..\..\phantom\util\Iterator.classdef.h" />
     <ClInclude Include="..\..\..\phantom\util\Iterator.h" />
     <ClInclude Include="..\..\..\phantom\util\TComposition.h" />
