--- a/projects/msvc/2010/unitest.vcxproj
+++ b/projects/msvc/2010/unitest.vcxproj
@@ -90,7 +90,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\..\unitest;..\..\..;$(GTEST_INC_PATH);$(BOOST_INC_PATH);</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\unitest;..\..\..;$(GTEST_INC_PATH);$(BOOST_ROOT);</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <ShowIncludes>false</ShowIncludes>
@@ -115,7 +115,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\..\unitest;..\..\..;$(GTEST_INC_PATH);$(BOOST_INC_PATH);</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\unitest;..\..\..;$(GTEST_INC_PATH);$(BOOST_ROOT);</AdditionalIncludeDirectories>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <AdditionalOptions>/MP -Zm300 /bigobj %(AdditionalOptions)</AdditionalOptions>
