--- a/projects/msvc/2010/phantom.vcxproj.filters
+++ b/projects/msvc/2010/phantom.vcxproj.filters
@@ -770,6 +770,12 @@
     <ClInclude Include="..\..\..\phantom\def_reflection_dynamic.h">
       <Filter>defs</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\phantom\serialization\Trashbin.h">
+      <Filter>serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\phantom\serialization\Trashbin.classdef.h">
+      <Filter>serialization</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\phantom\reflection\TemplateSpecialization.cpp">
@@ -1057,6 +1063,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\phantom\reflection\StaticDataMember.cpp">
       <Filter>reflection</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\phantom\serialization\Trashbin.cpp">
+      <Filter>serialization</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
