PHANTOM / MODULE : add Module loader to simplify module loading (handling errors and dependencies) (bêta) PHANTOM / QT : change ModuleLoader to ModuleExplorer and handle load via the new ModuleLoader added in phantom

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ projects/msvc/2010/unitest/qt_test
 dependencies/QWidgets/build
 dependencies/QWidgets/bin
 dependencies/QWidgets/bin
+dependencies/libjit/bin
+dependencies/libjit/libjit_test/Debug
+dependencies/libjit/libjit_test/Release
+dependencies/libjit/msvc/Debug
+dependencies/libjit/msvc/Release
