--- a/projects/msvc/2010/qt.vcxproj.filters
+++ b/projects/msvc/2010/qt.vcxproj.filters
@@ -209,12 +209,6 @@
     <ClCompile Include="..\..\..\phantom\qt\DataComboBox.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="GeneratedFiles\Debug\moc_DataComboBox.cpp">
-      <Filter>Generated Files\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="GeneratedFiles\Release\moc_DataComboBox.cpp">
-      <Filter>Generated Files\Release</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\phantom\qt\DataComboBoxEditor.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -222,6 +216,12 @@
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
     <ClCompile Include="GeneratedFiles\Release\moc_VariableWidget.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_DataComboBox.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_DataComboBox.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
   </ItemGroup>
@@ -275,6 +275,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\phantom\qt\VariableAction.hxx">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\phantom\qt\DataComboBoxEditor.hxx">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
