PHANTOM / REFLECTION : add hacks to extract per-class vtable pointers (with assembly trick, only on MSVC for now) + continue work on template compilation

--- a/projects/msvc/2010/phantom.vcxproj
+++ b/projects/msvc/2010/phantom.vcxproj
@@ -313,6 +313,8 @@
     <ClInclude Include="..\..\..\phantom\reflection\MemberFunctionPointerType.hxx" />
     <ClInclude Include="..\..\..\phantom\reflection\MemberPointerType.h" />
     <ClInclude Include="..\..\..\phantom\reflection\MemberPointerType.hxx" />
+    <ClInclude Include="..\..\..\phantom\reflection\native\NativeVTablePointerExtractor.h" />
+    <ClInclude Include="..\..\..\phantom\reflection\native\NativeVTableSizeComputer.h" />
     <ClInclude Include="..\..\..\phantom\reflection\native\TAggregationClass.h" />
     <ClInclude Include="..\..\..\phantom\reflection\native\TAggregationClass.hxx" />
     <ClInclude Include="..\..\..\phantom\reflection\native\TComponentClass.h" />
