--- a/projects/msvc/2010/phantom.vcxproj.filters
+++ b/projects/msvc/2010/phantom.vcxproj.filters
@@ -1496,6 +1496,12 @@
     <ClInclude Include="..\..\..\phantom\reflection\TemplateSignature.hxx">
       <Filter>reflection</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\phantom\reflection\native\NativeVTablePointerExtractor.h">
+      <Filter>reflection\native</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\phantom\reflection\native\NativeVTableSizeComputer.h">
+      <Filter>reflection\native</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\phantom\reflection\TemplateSpecialization.cpp">
